getLast átírása (Java 20-ban úgy tűnink nincs ilyen)